Fix card icons overflowing from container

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     border: 0;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .container {
@@ -150,15 +151,6 @@ nav {
     width: 50px;
 }
 
-.card-buttons {
-    width: 25px;
-
-    display: flex;
-    gap: 20px;
-
-   
-}
-
 .cards {
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(2, 1fr);
@@ -168,8 +160,7 @@ nav {
 
 .card {
     background-color: white;
-    width: 90%;
-    height: 150px;
+    height: 200px;
 
     border-left: solid 7px rgb(247, 192, 74);
     border-radius: 10px;
@@ -178,7 +169,21 @@ nav {
     flex-direction: column;
     gap: 10px;
     padding: 40px 20px;
+
 }
+
+.card-buttons {
+    align-self: flex-end;
+    display: flex;
+    gap: 20px;
+
+    margin-top: auto;
+}
+
+.card-buttons img {
+    width: 25px;
+}
+
 
 /* Icon and Images */
 
